style: fixed main title alignment

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,16 +1,16 @@
 .homepage-container {
   display: flex;
-  height: 90vh;
+  height: 88vh;
 }
 
 .homepage-container img {
   width: 100%;
-  max-width: 92%;
+  max-width: 95%;
 }
 
 figure {
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
   text-align: right;
 }
@@ -18,11 +18,13 @@ figure {
 .main-title {
   width: 700px;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .main-heading {
-  position: absolute;
-  top: 27%;
   max-width: 400px;
   padding: 2rem;
   word-spacing: 0.1rem;
